<resources>
    <string name="app_name" translatable="false">Suso</string>

    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <string name="action_settings">Settings</string>


    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <string name="substcard_hour">Hour:</string>
    <string name="substcard_teacher">Teacher:</string>
    <string name="substcard_subject">Subject:</string>
    <string name="substcard_room">Room:</string>
    <string name="substcard_comment">Comment:</string>

    <string name="no_substitutions">No Substitutions</string>

    <string name="substplan_network_error">Wasn\'t able to download Substitutionplan. Please check your internetconnection</string>
    <string name ="substplan_json_error">Error while trying to read substitution data. Data may be incorrect</string>
    <string name="login_invalid_data">Invalid username or password</string>
    <string name="login_network_error">Error while trying to log in. Please check your connection.</string>
    <string name="base_url" translatable="false">https://suso.schulen.konstanz.de/intern/</string>
    <string name="nav_substitutionplan">Substitutionplan</string>
    <string name="nav_logout">Logout</string>
    <string name="asset_statements" translatable="false"> [{
    \"include\": \"https://suso.schulen.konstanz.de/.well-known/assetlinks.json\"
  }]</string>
    <string name="login_header">Please login with your Novell credentials</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginbtn">Login</string>
    <string name="login_error">An error occurred while trying to log in.</string>
    <string name="nav_blog">Blog</string>
    <string name="substplan_no_subst">At the moment there are no substitutions.</string>
    <string name="no_blog_posts">No blog posts</string>

</resources>
