<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/substitution_cardview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <LinearLayout
            android:id="@+id/substitution_layout_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/substcard_hour"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/substitution_card_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                tools:text="Hour" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/substitution_layout_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/substitution_layout_hour">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/substcard_teacher"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/substitution_card_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                tools:text="Teacher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/substitution_layout_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/substitution_layout_teacher">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/substcard_subject"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/substitution_card_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                tools:text="Subject" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/substitution_layout_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/substitution_layout_subject">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/substcard_room"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/substitution_card_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                tools:text="Room" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/substitution_layout_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/substitution_layout_room">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/substcard_comment"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/substitution_card_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                tools:text="Comment" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>

